--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <h1>123123</h1>
+    <title>simi's git</title>
+    <h1>simi...</h1>
 </head>
 <body>
     
